@@ -21,7 +21,8 @@
         <dependency force="true" org="net.sourceforge.java-readline" name="java-readline" rev="0.8.0" conf="build->default"/>
         <dependency force="true" org="org.slf4j" name="slf4j" rev="1.6.1" conf="build,test->default"/>
         <dependency force="true" org="org.springframework" name="spring" rev="3.0+"
-          conf="build->context-support,expression,orm,oxm,tx,web-servlet"/>
+          conf="build->aop,context-support,expression,orm,oxm,tx,web-servlet"/>
+        <dependency force="true" org="org.aopalliance" name="aopalliance" rev="1.+" conf="build->default"/>
         <dependency force="true" org="org.hibernate" name="hibernate-validator" rev="4.1.0.Final" conf="test->default"/>
     </dependencies>
 
